Fix deprecated code
Fixed deprecation