@@ -92,14 +92,14 @@ public class TLCApp extends DistApp {
 	 * @see tlc2.tool.distributed.DistApp#getCheckDeadlock()
 	 */
 	public final Boolean getCheckDeadlock() {
-		return new Boolean(this.checkDeadlock);
+		return Boolean.valueOf(this.checkDeadlock);
 	}
 
 	/* (non-Javadoc)
 	 * @see tlc2.tool.distributed.DistApp#getPreprocess()
 	 */
 	public final Boolean getPreprocess() {
-		return new Boolean(this.preprocess);
+		return Boolean.valueOf(this.preprocess);
 	}
 
 	/* (non-Javadoc)
